--- a/my-app/src/assets/css/EmailForm.css
+++ b/my-app/src/assets/css/EmailForm.css
@@ -35,9 +35,57 @@
     height: 260px;
 }
 
-/* .inputs {
-    display: flex;
-} */
+
+/* THIS IS FOR THE NAME INPUTS */
+    .name-input {
+        display: flex;
+    }
+
+    .name-input input{
+        width: 130px;
+        height: 50px;
+        outline: none;
+        border: .5px solid #dbdbdb;
+        padding: .9rem;
+    }
+
+    #input-one input {
+        border-radius: 3px 0 0 3px;
+    }
+
+    #input-two input {
+        border-radius: 0 3px 3px 0;
+    }
+
+    input::placeholder{
+        color: #bfbfbf;
+    }
+
+/* THIS IS FOR THE EMAIL INPUTS */
+    .email-input {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .email-input input {
+       height: 50px;
+       outline: none;
+       border: .5px solid #dbdbdb;
+       border-radius: 3px;
+       padding: .9rem;
+    }
+
+    .btn-box {
+        height: 100px;
+    }
+
+    .btn-box p {
+        font-size: .6rem;
+        padding: 1rem 0;
+    }
+
+
+
 
 .contactIcons {
     display: flex;
