need to fix button styling

--- a/my-app/src/assets/css/EmailForm.css
+++ b/my-app/src/assets/css/EmailForm.css
@@ -82,14 +82,86 @@
     .btn-box p {
         font-size: .6rem;
         padding: 1rem 0;
+        text-align: center;
     }
 
+    .btn-box button {
+        width: 260px;
+        height: 45px;
+        font-size: 1rem;
+        border-radius: 2px;
+        border: none;
+        outline: none;
+        background: #BA54EB;
+        color: white;
+        cursor: pointer;
+    }
 
+    .message-text {
+        width: 260px;
+        height: 45px;
+        font-size: 1rem;
+        border-radius: 2px;
+        border: none;
+        outline: none;
+        background: white;
+        color: black;
+    }
 
+    .message-text::placeholder{
+        color: #bfbfbf;
+        text-align: center;
+    }
 
-.contactIcons {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    padding: .2rem;
-}
+/* THIS IS FOR THE ICON BOXES/PICS */
+    .other-content{
+        width: 260px;
+        height: 90px;
+    }
+
+    .other-content{
+        text-align: center;
+        padding: .2rem;
+        font-size: .6rem;
+    }
+
+    .links {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding-top: .5rem;
+    }
+
+    .links li{
+        display: block;
+        width: 120px;
+        height: 50px;
+        text-decoration: none;
+        line-height: 50px;
+        text-align: center;
+        border-radius: 3px;
+        color: white;
+    }
+
+    .links li:nth-child(1) {
+        background: #26242e;
+    }
+
+    .links li:nth-child(2) {
+        background: blue;
+    }
+
+    .links li:nth-child(3) {
+        background: purple;
+    }
+
+    .links li:nth-child(4) {
+        background: aqua;
+    }
+
+    /* .contactIcons {
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        padding: .2rem;
+    } */
