--- a/my-app/src/assets/css/Portfolio.css
+++ b/my-app/src/assets/css/Portfolio.css
@@ -1,5 +1,5 @@
 
-#about-wrapper {
+/* #about-wrapper {
     position: absolute;
     top: 40%;
     left: 50%;
@@ -16,4 +16,134 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+} */
+
+* {
+    /* margin: 0; */
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+#about-wrapper {
+    max-width: 1000px;
+    margin: auto;
+    overflow: auto;
+    padding: 0 2rem;
 }
+
+/* img {
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+#left-image {
+  border-radius: 15px 0px 0px 15px;
+}
+
+#right-image {
+  border-radius: 0px 15px 15px 0px;
+} */
+
+.card {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 2rem;
+    background: #fff;
+    margin-bottom: 2rem;
+    background-color: rgba(255, 255, 255, 0,2);
+    box-shadow: 0 2px 15px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
+    position: static;
+}
+
+/* .card h3 {
+    margin-bottom: 2rem;
+  }
+  
+  .card img {
+    height: 100%;
+  }
+  
+  .card > div {
+    padding: 2rem;
+  }
+  
+  .card:nth-child(even) img {
+    order: 2;
+  } */
+
+  .projBtn {
+      display: inline-block;
+      background: blue;
+      color: #fff;
+      padding: 0.8rem 1.8rem;
+      margin-top: 2rem;
+      border-radius: 8px;
+      cursor: pointer;
+  }
+
+  .projBtn:hover {
+    opacity: 0.8;
+  }
+
+  .linkContainer {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+      align-items: center;
+  }
+ /* 
+
+
+.projectsTitle {
+  font-size: 56px;
+  letter-spacing: 0.005em;
+  font-family: Menlo;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #1d1d1f;
+  margin-bottom: 2rem;
+}
+
+.projectsLineBreak {
+  border: none;
+  height: 2px;
+  background-color: grey;
+  max-width: 50%;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
+.linkContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+@media (max-width: 770px) {
+  .card {
+    display: block;
+  }
+}
+
+@media (max-width: 375px) {
+  .projectsTitle {
+    margin-top: 5rem;
+    font-size: 36px;
+    letter-spacing: 0.005em;
+    font-family: Menlo;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #1d1d1f;
+    position: static;
+  }
+} */
+
+   
