--- a/my-app/src/assets/css/EmailForm.css
+++ b/my-app/src/assets/css/EmailForm.css
@@ -11,7 +11,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     width: 280px;
-    height: 500px;
+    height: 520px;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -20,19 +20,20 @@
     align-items: center;
     justify-content:space-evenly;
     color: white;
+    /* background-image: url("http://clubsolaris.com/imgs/tips-to-take-care-of-the-beach-during-your-vacations/beach-sea-cancun-sun.png") */
 }
 
 .intro-text {
     width: 260px;
     height: 60px;
-    margin: 1rem;
+    margin: .2rem;
     font-size: 1.2rem;
     color: #fff;
 }
 
 .email-form {
     width: 260px;
-    height: 260px;
+    height: 390px;
 }
 
 
@@ -119,7 +120,7 @@
         height: 90px;
     }
 
-    .other-content{
+    .other-content p {
         text-align: center;
         padding: .2rem;
         font-size: .6rem;
@@ -132,7 +133,7 @@
         padding-top: .5rem;
     }
 
-    .links li{
+    .links a{
         display: block;
         width: 120px;
         height: 50px;
@@ -143,20 +144,28 @@
         color: white;
     }
 
-    .links li:nth-child(1) {
-        background: #26242e;
+    .links a:nth-child(1):hover {
+        /* background: #26242e; */
+        color: #50E3C2;
+        transition: color 500ms ease .1s;
     }
 
-    .links li:nth-child(2) {
-        background: blue;
+    .links a:nth-child(2):hover {
+        /* background: blue; */
+        color: #50E3C2;
+        transition: color 500ms ease .1s;
     }
 
-    .links li:nth-child(3) {
-        background: purple;
+    .links a:nth-child(3):hover {
+        /* background: purple; */
+        color: #50E3C2;
+        transition: color 500ms ease .1s;
     }
 
-    .links li:nth-child(4) {
-        background: aqua;
+    .links a:nth-child(4):hover {
+        /* background: aqua; */
+        color: #50E3C2;
+        transition: color 500ms ease .1s;
     }
 
     /* .contactIcons {
