--- a/my-app/src/assets/css/Portfolio.css
+++ b/my-app/src/assets/css/Portfolio.css
@@ -31,7 +31,7 @@
     padding: 0 2rem;
 }
 
-/* img {
+img {
   width: 100%;
   object-fit: cover;
   object-position: center;
@@ -40,6 +40,8 @@
 #left-image {
   border-radius: 15px 0px 0px 15px;
 }
+
+/* 
 
 #right-image {
   border-radius: 0px 15px 15px 0px;
@@ -57,12 +59,24 @@
     position: static;
 }
 
+.card img {
+  height: 100%;
+}
+
+.card > div {
+  padding: 2rem;
+}
+
+.card h3 {
+  margin-bottom: 2rem;
+}
+
+.card:nth-child(even) img {
+  order: 2;
+} 
+
 /* .card h3 {
     margin-bottom: 2rem;
-  }
-  
-  .card img {
-    height: 100%;
   }
   
   .card > div {
@@ -93,19 +107,30 @@
       justify-content: space-evenly;
       align-items: center;
   }
+
+  .project-title {
+    font-size: 56px;
+    letter-spacing: 0.005em;
+    font-family: Gilroy;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #1d1d1f;
+    margin-bottom: 2rem;
+  }
+
+  .project-break {
+    border: none;
+    height: 2px;
+    background-color: grey;
+    max-width: 50%;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+  }
  /* 
-
-
-.projectsTitle {
-  font-size: 56px;
-  letter-spacing: 0.005em;
-  font-family: Menlo;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #1d1d1f;
-  margin-bottom: 2rem;
-}
 
 .projectsLineBreak {
   border: none;
