--- a/my-app/src/assets/css/Contact.css
+++ b/my-app/src/assets/css/Contact.css
@@ -16,6 +16,7 @@
     align-items: center; */
 }
 
-/* .email {
-    display: grid;
-} */
+.skills {
+    margin-top: 13rem;
+    margin-left: 10rem;
+}
