--- a/my-app/public/style.css
+++ b/my-app/public/style.css
@@ -6,14 +6,14 @@
   }
   
   body {
-    background: #777;
+    background: #418DFF;
     display: block;
   }
   
   #root {
     height: 100vh;
     padding: 18px;
-    background-color: gray;
+    background-color: #418DFF;
     /* background-color: #1f1f1f; */
   }
   
