--- a/my-app/src/assets/css/AboutMe.css
+++ b/my-app/src/assets/css/AboutMe.css
@@ -2,15 +2,15 @@
 
 #mainPage-wrapper {
     position: absolute;
-    top: 50%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 60%;
-    height: 450px;
+    width: 80%;
+    height: 700px;
     border-radius: 10px;
     max-width: 100%;
     padding: 4.5rem 2.5rem 1.5rem 2.5rem;
-    background-color: rgba(255, 255, 255, 0.226);
+    background-color: #fff;
     border-radius: 4px;
     opacity: 1;
     display: flex;
@@ -28,12 +28,19 @@
 #bio-wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-gap: 20px;
+    grid-gap: 45px;
+}
+
+.img-container {
+    border-radius: 4px;
+    /* border-color: red; */
 }
 
 .about-picture {
     height: 400px;
     width: 100%;
+    margin-top: -25px;
+    /* border-color: red; */
 }
 
 .stackIcons {
