--- a/my-app/src/assets/css/Portfolio.css
+++ b/my-app/src/assets/css/Portfolio.css
@@ -37,6 +37,9 @@ img {
   object-position: center;
 }
 
+/* THIS IS FOR THE ZOOM ON HOVER */
+/* transition: transform 750ms cubic-bezier(0.5, 0, 0.5, 1), opacity 250ms linear; */
+
 #left-image {
   border-radius: 15px 0px 0px 15px;
 }
@@ -89,7 +92,8 @@ img {
 
   .projBtn {
       display: inline-block;
-      background: blue;
+      background: linear-gradient(to right, #00BF58, #00D1FF);
+      /* background: linear-gradient(to right, #0050FF, #00F0FF); */
       color: #fff;
       padding: 0.8rem 1.8rem;
       margin-top: 2rem;
