--- a/my-app/public/style.css
+++ b/my-app/public/style.css
@@ -6,14 +6,15 @@
   }
   
   body {
-    background: #418DFF;
+    /* background: #418DFF; */
+    background: linear-gradient(to right, #0050FF, #00F0FF);
     display: block;
   }
   
   #root {
     height: 100vh;
     padding: 18px;
-    background-color: #418DFF;
+    /* background: linear-gradient(to right, #0050FF, #00F0FF); */
     /* background-color: #1f1f1f; */
   }
   
@@ -26,7 +27,6 @@
   }
   
   .app > * {
-    background: #fff;
     border-radius: 6px;
     border: 4px solid #333;
     box-shadow: 0 8px 12px -4px black;
