--- a/my-app/src/assets/css/AboutMe.css
+++ b/my-app/src/assets/css/AboutMe.css
@@ -46,6 +46,7 @@
         display: flex;
         flex-wrap: wrap;
         background-color: yellow;
+        align-items: center;
     }
 
     /* This is where i can resize the box holding the pic */
@@ -97,7 +98,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        width: 50%;
+        width: 100%;
         height:100%;
         object-fit: cover;
     }
@@ -153,8 +154,9 @@
 }
 
 .img-box {
-    width: 100%;
+    width: 50%;
     background-color: purple;
+    border-radius: 30px;
 }
 
 /* .img-overlay {
