--- a/my-app/src/assets/css/AboutMe.css
+++ b/my-app/src/assets/css/AboutMe.css
@@ -11,7 +11,7 @@
     top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 80%;
+    width: 100%;
     height: 700px;
     border-radius: 10px;
     max-width: 100%;
@@ -47,6 +47,8 @@
         flex-wrap: wrap;
         background-color: yellow;
         align-items: center;
+        justify-content: center;
+        margin-right: 2rem;
     }
 
     /* This is where i can resize the box holding the pic */
@@ -154,7 +156,7 @@
 }
 
 .img-box {
-    width: 50%;
+    width: 60%;
     background-color: purple;
     border-radius: 30px;
 }
@@ -182,6 +184,8 @@
         background-color: white;
         padding: 4rem;
         border-radius: 30px;
+        width: 550px;
+        margin-bottom: 2rem;
     }
     .about-picture {
         height: 400px;
