--- a/my-app/src/assets/css/Navbar.css
+++ b/my-app/src/assets/css/Navbar.css
@@ -5,17 +5,29 @@
 body {
     margin: 0;
     padding: 0;
+    position: relative;
+    box-sizing: border-box;
 }
 
 .nav {
     position: fixed;
-   /*  display: flex;
-    justify-content: space-between;
-    align-items: center; */
+    display: block;
+    /* background-color: black; */
     width: 100%;
 }
 
-.navbar-links ul {
+.nav-ul {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-evenly;
+    margin: auto;
+    background-color: black;
+    width: 100%;
+    padding: 1.5rem;
+}
+
+/* .navbar-links ul {
     margin: 0;
     padding: 0;
     display: flex;
@@ -24,8 +36,8 @@ body {
 .navbar-links li {
     letter-spacing: 1px;
 }
-
-.nav-ul {
+ */
+/* .nav-ul {
     width: 63w;
     margin: auto;
     color:white;
@@ -33,8 +45,8 @@ body {
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-evenly; 
-    /* border: 1px solid #50E3C2; */
-}
+    border: 1px solid #50E3C2;
+} */
 
 .nav-item {
     color: #50E3C2;
@@ -45,27 +57,44 @@ body {
     transition: color 600ms ease 0s;
 }
 
-.brand {
+/* .brand {
     font-size: 1.5rem;
     color: white;
     letter-spacing: 1px;
     margin: 0.5rem;
     position: fixed;
-}
+} */
 
 ol, ul {
     list-style: none;
 }
 
+ul {
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+}
+
+li {
+    text-transform: uppercase;
+    /* font-weight: 600; */
+    letter-spacing: 1px;
+    font-size: 0.8em;
+    font-family: 'Trispace', sans-serif;
+    font-weight: 300;
+}
+
 .toggle-button {
-    position: absolute;
+    /* position: absolute;
     top: 1rem;
     right: 1rem;
     display: none;
     flex-direction: column;
     justify-content: space-evenly;
     width: 30px;
-    height: 20px;
+    height: 20px; */
 }
 
 .toggle-button .bar {
