--- a/my-app/src/assets/css/Navbar.css
+++ b/my-app/src/assets/css/Navbar.css
@@ -1,16 +1,13 @@
 * {
     box-sizing: border-box;
-  }
-  
-body {
-    margin: 0;
     padding: 0;
-    position: relative;
-    box-sizing: border-box;
-}
+    margin: 0;
+    border: 0;
+  }
 
 .nav {
     position: fixed;
+    top: 0;
     display: block;
     /* background-color: black; */
     width: 100%;
