--- a/my-app/src/assets/css/Portfolio.css
+++ b/my-app/src/assets/css/Portfolio.css
@@ -19,10 +19,16 @@
 } */
 
 * {
-    /* margin: 0; */
-    padding: 0;
-    box-sizing: border-box;
-  }
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
+  
+.project-title {
+  margin-top: 5rem;
+  background-color: red;
+}
 
 #about-wrapper {
     max-width: 1000px;
