need to fix about me and decide on layout.  Also portfolio page

--- a/my-app/public/style.css
+++ b/my-app/public/style.css
@@ -7,7 +7,7 @@
   
   body {
     /* background: #418DFF; */
-    background: linear-gradient(to right, #0050FF, #00F0FF);
+    background: linear-gradient(to top, #f0e9dc, #00F0FF);
     display: block;
     margin: 0;
   }
