--- a/my-app/src/assets/css/Navbar.css
+++ b/my-app/src/assets/css/Navbar.css
@@ -19,7 +19,7 @@
     align-items: center;
     justify-content: space-evenly;
     margin: auto;
-    background-color: #1F1F1F;
+    background: #2c426a;
     width: 100%;
     padding: 1.5rem;
 }
