--- a/my-app/src/assets/css/Portfolio.css
+++ b/my-app/src/assets/css/Portfolio.css
@@ -30,25 +30,25 @@
   background-color: red;
 }
 
-#about-wrapper {
+/* #about-wrapper {
     max-width: 1000px;
     margin: auto;
     overflow: auto;
     padding: 0 2rem;
-}
+} */
 
-img {
+/* img {
   width: 100%;
   object-fit: cover;
   object-position: center;
-}
+} */
 
 /* THIS IS FOR THE ZOOM ON HOVER */
 /* transition: transform 750ms cubic-bezier(0.5, 0, 0.5, 1), opacity 250ms linear; */
 
-#left-image {
+/* #left-image {
   border-radius: 15px 0px 0px 15px;
-}
+} */
 
 /* 
 
@@ -56,7 +56,7 @@ img {
   border-radius: 0px 15px 15px 0px;
 } */
 
-.card {
+/* .card {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 2rem;
@@ -67,8 +67,8 @@ img {
     border-radius: 15px;
     position: static;
 }
-
-.card img {
+ */
+/* .card img {
   height: 100%;
 }
 
@@ -82,7 +82,7 @@ img {
 
 .card:nth-child(even) img {
   order: 2;
-} 
+}  */
 
 /* .card h3 {
     margin-bottom: 2rem;
@@ -96,20 +96,19 @@ img {
     order: 2;
   } */
 
-  .projBtn {
+  /* .projBtn {
       display: inline-block;
       background: linear-gradient(to right, #00BF58, #00D1FF);
-      /* background: linear-gradient(to right, #0050FF, #00F0FF); */
       color: #fff;
       padding: 0.8rem 1.8rem;
       margin-top: 2rem;
       border-radius: 8px;
       cursor: pointer;
-  }
+  } */
 
-  .projBtn:hover {
+  /* .projBtn:hover {
     opacity: 0.8;
-  }
+  } */
 
   .linkContainer {
       display: flex;
@@ -129,7 +128,7 @@ img {
     margin-bottom: 2rem;
   }
 
-  .project-break {
+  /* .project-break {
     border: none;
     height: 2px;
     background-color: grey;
@@ -139,7 +138,7 @@ img {
     align-content: center;
     margin-top: 5rem;
     margin-bottom: 5rem;
-  }
+  } */
  /* 
 
 .projectsLineBreak {
