got some basic transitions done, but need to fix so that they dont persist when loading another route

--- a/my-app/public/style.css
+++ b/my-app/public/style.css
@@ -36,3 +36,24 @@
     grid-column: 1;
     grid-row: 1;
   }
+
+
+/* Route-Transition Styling */
+  .fade-enter {
+    opacity: -1;
+   /*  z-index: 1; */
+  }
+  
+  .fade-enter.fade-enter-active {
+    opacity: 1;
+    transition: opacity 250ms ease-in;
+  }
+
+  .fade-exit {
+    opacity: -1;
+  }
+
+  .fade-exit.fade-exit-active {
+    opacity: 1;
+    transition: opacity 1000ms ease-in;
+  }
