figured out how to make images clickable for my landing page.  Now need o finish and work on transitions

--- a/my-app/public/style.css
+++ b/my-app/public/style.css
@@ -40,20 +40,24 @@
 
 /* Route-Transition Styling */
   .fade-enter {
-    opacity: -1;
-   /*  z-index: 1; */
+    opacity: 0;
   }
   
-  .fade-enter.fade-enter-active {
+ /*  .fade-enter */.fade-enter-active {
     opacity: 1;
-    transition: opacity 250ms ease-in;
+    transition: opacity 500ms ease-in;
   }
 
   .fade-exit {
-    opacity: -1;
+    opacity: 1;
   }
 
-  .fade-exit.fade-exit-active {
+  /* .fade-exit */.fade-exit-active {
     opacity: 1;
-    transition: opacity 1000ms ease-in;
+    transition: opacity 500ms ease-in;
   }
+
+  /* .fade-exit-done {
+    opacity: 0;
+    transition: opacity 100ms ;
+  } */
