--- a/my-app/src/assets/css/AboutMe.css
+++ b/my-app/src/assets/css/AboutMe.css
@@ -23,6 +23,8 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    Margin-top: 30rem;
+   
     
     /* transition: opacity 0.325s ease-in-out, transform 0.325s ease-in-out;
     transition-property: opacity, transform;
