--- a/my-app/src/assets/css/Navbar.css
+++ b/my-app/src/assets/css/Navbar.css
@@ -6,7 +6,7 @@
   }
 
 .nav {
-    position: fixed;
+    /* position: fixed; */
     top: 0;
     display: block;
     /* background-color: black; */
