--- a/my-app/src/components/feature/personal_card.css
+++ b/my-app/src/components/feature/personal_card.css
@@ -15,6 +15,16 @@
     width: 100%;
     min-height: 100vh;
   }
+
+  /* Card hover FX */
+  .card-1 {
+    max-width: 100%;
+    transition: transform .2s ease-in;
+  }
+
+  .card-1:hover {
+    transform: scale(1.05);
+  }
   
   /*Perspective: 1000px -> allows us to vamp up the 3D effect based on px value*/
   .card {
