--- a/my-app/src/components/feature/personal_card.css
+++ b/my-app/src/components/feature/personal_card.css
@@ -17,24 +17,26 @@
   }
 
   /* Card hover FX */
-  .card-1 {
+  .card{
     max-width: 100%;
     transition: transform .2s ease-in;
   }
 
-  .card-1:hover {
+  .card:hover {
     transform: scale(1.05);
   }
   
   /*Perspective: 1000px -> allows us to vamp up the 3D effect based on px value*/
   .card {
     margin: 100px auto 0;
-    width: 400px;
+    width: 1200px;
     height: 600px;
     perspective: 1000px;
-    /* display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between; */
+    display: flex;
+    flex-direction: row;
+    padding: .7rem;
+   /*  flex-wrap: wrap; */
+    justify-content: space-between;
   }
   
   /*Preserve-3d along with transform allows us to perform the transform in a 3D space*/
