some more cleanup, button changes, fixed background gradient

--- a/my-app/public/style.css
+++ b/my-app/public/style.css
@@ -7,9 +7,11 @@
   
   body {
     /* background: #418DFF; */
-    background: linear-gradient(to top, #f0e9dc, #00F0FF);
     display: block;
     margin: 0;
+    height: 100;
+    background: linear-gradient(to top,#00F0FF 30%, #f0e9dc 60%);
+    background-attachment: fixed;
   }
   
   #root {
