--- a/my-app/src/assets/css/EmailForm.css
+++ b/my-app/src/assets/css/EmailForm.css
@@ -32,7 +32,7 @@
     border: .7px solid rgba(255,255,255,.2);
     align-items: center;
     justify-content:space-evenly;
-    color: white;
+    color: #2c426a;
     grid-area: email;
     /* background-image: url("http://clubsolaris.com/imgs/tips-to-take-care-of-the-beach-during-your-vacations/beach-sea-cancun-sun.png") */
 }
@@ -42,7 +42,7 @@
     height: 60px;
     margin: .2rem;
     font-size: 1.2rem;
-    color: #fff;
+    color: #2c426a;
 }
 
 .email-form {
@@ -107,7 +107,7 @@
         border-radius: 2px;
         border: none;
         outline: none;
-        background: #BA54EB;
+        background: #2c426a;
         color: white;
         cursor: pointer;
     }
@@ -155,12 +155,12 @@
         line-height: 50px;
         text-align: center;
         border-radius: 3px;
-        color: white;
+        color: #FFF;
     }
 
     .links a:nth-child(1):hover {
         /* background: #26242e; */
-        color: #50E3C2;
+        color: #2c426a;
         transition: color 500ms ease .1s;
         animation-name: scale;
         animation-duration: 1s;
@@ -182,10 +182,10 @@
             transform: scale(2.5);
         }
     }
-
+    /* background: linear-gradient(to top,#00F0FF 30%, #f0e9dc 60%); */
     .links a:nth-child(2):hover {
         /* background: blue; */
-        color: #50E3C2;
+        color: #2c426a;
         transition: color 500ms ease .1s;
         transition: color 500ms ease .1s;
         animation-name: scale;
@@ -196,7 +196,7 @@
 
     .links a:nth-child(3):hover {
         /* background: purple; */
-        color: #50E3C2;
+        color: #2c426a;
         transition: color 500ms ease .1s;
         transition: color 500ms ease .1s;
         animation-name: scale;
@@ -207,7 +207,7 @@
 
     .links a:nth-child(4):hover {
         /* background: aqua; */
-        color: #50E3C2;
+        color: #2c426a;
         transition: color 500ms ease .1s;
         transition: color 500ms ease .1s;
         animation-name: scale;
