--- a/my-app/src/components/feature/personal_card.css
+++ b/my-app/src/components/feature/personal_card.css
@@ -28,7 +28,7 @@
   
   /*Perspective: 1000px -> allows us to vamp up the 3D effect based on px value*/
   .card {
-    margin: 100px auto 0;
+    margin: 25px auto 0;
     width: 1200px;
     height: 600px;
     perspective: 1000px;
@@ -152,3 +152,23 @@
     font-size: 18px;
     line-height: 1.5;
   }
+
+
+  @media only screen and (min-device-width: 280px) and (max-device-width: 480px) {
+   
+    /* .card {
+        flex-direction: column;
+    } */
+  }
+
+  /* .card {
+    margin: 25px auto 0;
+    width: 1200px;
+    height: 600px;
+    perspective: 1000px;
+    display: flex;
+    flex-direction: row;
+    padding: .7rem;
+   
+    justify-content: space-between;
+  } */
