--- a/my-app/src/assets/css/AboutMe.css
+++ b/my-app/src/assets/css/AboutMe.css
@@ -300,7 +300,7 @@
   .container {
     width: 1280px;
     min-height: 50px;
-    margin: 5px auto 0;
+    margin: 1px auto 0;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -421,81 +421,22 @@
     }
 
     .overlay-practice {
-        /* transform: translate(00%, -0%); */
-        width: 1400px;
+        width: 500vw;
         margin-top: 600px;
         transform: translate(-17%, -0%);
     }
 
     #bio-wrapper {
-        /* background-color: yellow; */
         transform: translate(47%, -0%);
         display: flex;
         flex-direction: column;
+        font-size: 25px;
+        margin-top: 25rem;
     }
 
-  }
-
-  @media only screen and (min-device-width: 280px) and (max-device-width: 480px) {
     .container {
-        background: orangered;
-      
+        width: 365vw;
+        transform: translate(-0%, -0%);
+        
     }
-    
   }
-
- /*  #bio-wrapper {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 10px;
-} */
-
-   /* .overlay-practice {
-        position: relative;
-        width: auto;
-        height: auto;
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: center;
-        margin-right: 1.5rem;
-        margin-bottom: 2rem;
-    }  */
-
-  /* sideBio {
-    background-color: white;
-    padding: 4rem;
-    border-radius: 30px;
-    width: 1000px;
-    margin-bottom: 2rem;
-    margin-right: 4rem;
-} */
-
-  /* .container {
-    width: 1280px;
-    min-height: 50px;
-    margin: 5px auto 0;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-  } */
-
-  /* #mainPage-wrapper {
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    height: 700px;
-    border-radius: 10px;
-    max-width: 100%;
-    padding: 4.5rem 2.5rem 1.5rem 2.5rem;
-    
-    border-radius: 4px;
-    opacity: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    Margin-top: 24rem;
-} */
